Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13226

Server crashes when tmpdir runs out of space

    XMLWordPrintable

Details

    Description

      A user running 10.2.7 experienced the following crash:

      2017-06-28 13:37:14 139942218483456 [Warning] mysqld: Disk is full writing '/mariadb/tmp/#sql_c8b_5.MAD' (Errcode: 28 "No space left on device"). Waiting for someone to free space... (Expect up to 60 secs delay for server to continue after freeing disk space)
      2017-06-28 13:37:14 139942218483456 [Warning] mysqld: Retry in 60 secs. Message reprinted in 600 secs
      170628 13:38:40 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed,
      something is definitely wrong and this may fail.
       
      Server version: 10.2.7-MariaDB-log
      key_buffer_size=67108864
      read_buffer_size=131072
      max_used_connections=206
      max_threads=1002
      thread_count=71
      It is possible that mysqld could use up to
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 2267268 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x7f44400e0268
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f46d5c2ed70 thread_stack 0x40000
      *** buffer overflow detected ***: /usr/sbin/mysqld terminated
      ======= Backtrace: =========
      /lib64/libc.so.6(__fortify_fail+0x37)[0x7f5deb77c047]
      /lib64/libc.so.6(+0x10d200)[0x7f5deb77a200]
      /lib64/libc.so.6(+0x10efb7)[0x7f5deb77bfb7]
      /usr/sbin/mysqld(my_addr_resolve+0x48)[0x7f5dee201198]
      /usr/sbin/mysqld(my_print_stacktrace+0x1c2)[0x7f5dee1eac32]
      /usr/sbin/mysqld(handle_fatal_signal+0x30d)[0x7f5dedc31a8d]
      /lib64/libpthread.so.0(+0xf370)[0x7f5ded118370]
      /usr/sbin/mysqld(+0xba0524)[0x7f5dee0e7524]
      /usr/sbin/mysqld(_ZN7AGGR_OP8end_sendEv+0x4a)[0x7f5dedacc8ea]
      /usr/sbin/mysqld(_Z24sub_select_postjoin_aggrP4JOINP13st_join_tableb+0x35)[0x7f5dedaccbc5]
      /usr/sbin/mysqld(_ZN4JOIN10exec_innerEv+0x8d3)[0x7f5dedacd553]
      /usr/sbin/mysqld(_ZN4JOIN4execEv+0x33)[0x7f5dedacd8a3]
      /usr/sbin/mysqld(_ZN18st_select_lex_unit4execEv+0x2ac)[0x7f5dedb0a82c]
      /usr/sbin/mysqld(_Z11mysql_unionP3THDP3LEXP13select_resultP18st_select_lex_unitm+0x2e)[0x7f5dedb0cb4e]
      /usr/sbin/mysqld(_Z13handle_selectP3THDP3LEXP13select_resultm+0x55)[0x7f5dedace345]
      /usr/sbin/mysqld(+0x528376)[0x7f5deda6f376]
      /usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x60e4)[0x7f5deda7c0a4]
      /usr/sbin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_statebb+0x2de)[0x7f5deda7f46e]
      /usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcjbb+0x2008)[0x7f5deda822e8]
      /usr/sbin/mysqld(_Z10do_commandP3THD+0x161)[0x7f5deda82e91]
      /usr/sbin/mysqld(_Z24do_handle_one_connectionP7CONNECT+0x1aa)[0x7f5dedb4605a]
      /usr/sbin/mysqld(handle_one_connection+0x3d)[0x7f5dedb4617d]
      /lib64/libpthread.so.0(+0x7dc5)[0x7f5ded110dc5]
      /lib64/libc.so.6(clone+0x6d)[0x7f5deb76473d]
      

      Attachments

        Activity

          People

            monty Michael Widenius
            GeoffMontee Geoff Montee (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.