MDEV-13226 Server crashes when tmpdir runs out of space

There was a missing test in CTE handling if creating a temporary table
failed (in this case as a result of out of space). This caused a table
handler to be used even if it was not allocated.